# VCPChat

./: .gitignore  CLAUDE.md  LICENSE  README.md  VCP.md  animations.css  image-viewer.html  main.html  main.js  messageRenderer.css  package-lock.json  package.json  preload.js  process_songs.py  pyproject.toml  renderer.js  requirements.txt  run_silent.vbs  splash.html  start.bat  style.css  text-viewer.html  themes.css  vcpchatREADME_en.md  vcpchatREADME_jp.md  vcpchatREADME_ru.md  修改后同步修改后必须运行一下.bat
Assistantmodules/: assistant-bar.html  assistant-bar.js  assistant.css  assistant.html  assistant.js
Canvasmodules/: canvas.css  canvas.html  canvas.js
Dicemodules/: dice.css  dice.html  dice.js
Flowlockmodules/: README.md  flowlock-integration.js  flowlock.css  flowlock.js
Forummodules/: forum.css  forum.html  forum.js
Groupmodules/: groupchat.js  grouprenderer.js
Mailboxmodules/: README.md  mailboxManager.js  testCompleteWorkflow.js  testIntegration.js  testNewFeatures.js  testPanel.html  verifyMessagePersistence.js
Memomodules/: memo.css  memo.html  memo.js
Musicmodules/: music.css  music.html  music.js
Notemodules/: notes.css  notes.html  notes.js
Notes/: notes.css  notes.html  notes.js
Promptmodules/: IMPROVEMENTS.md  README.md  modular-prompt-module.js  original-prompt-module.js  preset-prompt-module.js  prompt-manager.js  prompt-modules.css
RAGmodules/: APP启动示例.lnk  RAG_Observer.html  README-RAG-Observer.md  rag-observer-config.js  settings.js
SovitsTest/: GSVI.py  README.md  get_models.py  my_infer.py  test_sovits_api.py
Themesmodules/: themes-module.css  themes.html  themes.js
VCPHumanToolBox/: index.html  (+5 more)
rust_audio_engine/: Cargo.toml  README.md  前置工作.md
rust_audio_engine/src/: config.rs  decoder.rs  lib.rs  main.rs  pipeline.rs  player.rs  processor.rs  server.rs  wasapi_output.rs
(+207 files in other folders)
