[package]
name = "vcp_audio_engine"
version = "2.0.0"
edition = "2021"
description = "VCP Hi-Fi Audio Engine - Full Rust Native"

[lib]
name = "vcp_audio_engine"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "audio_server"
path = "src/main.rs"

[dependencies]
# --- Core Audio ---
symphonia = { version = "0.5", features = ["all"] }
cpal = "0.15"
soxr = "0.6.0"   # Restored for f64 Hi-Fi SoX VHQ resampling

# --- Parallelism ---
rayon = "1.10"
crossbeam = "0.8"
parking_lot = "0.12"

# --- HTTP/WebSocket Server ---
actix-web = "4"
actix-ws = "0.3"
actix-rt = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- DSP ---
rustfft = "6.2"
rand = "0.8"

# --- Utilities ---
log = "0.4"
env_logger = "0.11"
thiserror = "2"
dotenv = "0.15"
sha2 = "0.10"
hex = "0.4"

# --- Optional: PyO3 for backward compat ---
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
numpy = { version = "0.23", optional = true }

[features]
default = []
python = ["pyo3", "numpy"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.release.build-override]
opt-level = 3